--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.aspsine.swipetoloadlayout.SwipeToLoadLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:default_to_loading_more_scrolling_duration="500"
+    app:default_to_refreshing_scrolling_duration="1000"
+    app:load_more_complete_delay_duration="0"
+    app:load_more_final_drag_offset="@dimen/load_more_final_offset_google"
+    app:load_more_trigger_offset="@dimen/load_more_trigger_offset_google"
+    app:refresh_complete_delay_duration="0"
+    app:refresh_final_drag_offset="@dimen/refresh_final_offset_google"
+    app:refresh_trigger_offset="@dimen/refresh_trigger_offset_google"
+    app:swipe_style="above">
 
-    <TextView
-        android:id="@+id/tv_news"
-        android:gravity="center"
-        android:text="news"
+    <include
+        android:id="@id/swipe_refresh_header"
+        layout="@layout/layout_google_hook_header" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@id/swipe_target"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipToPadding="false" />
 
-</RelativeLayout>
+    <include
+        android:id="@id/swipe_load_more_footer"
+        layout="@layout/layout_google_hook_footer" />
+
+</com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
