--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
+    app:titleTextColor="@color/drawer_text_color"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="?attr/colorPrimary"
-    android:minHeight="?attr/actionBarSize"/>
+    android:minHeight="?attr/actionBarSize" />
