--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="base_margin">@dimen/dimen_10dp</dimen>
+    <dimen name="base_little_margin">@dimen/dimen_5dp</dimen>
+
+    <dimen name="news_list_image_width">85dp</dimen>
+    <dimen name="news_list_image_height">65dp</dimen>
+    <dimen name="news_list_image_margin">@dimen/dimen_5dp</dimen>
+
+    <dimen name="title_text_size">14sp</dimen>
+    <dimen name="content_text_size">12sp</dimen>
+
+    <dimen name="card_view_dimen">@dimen/dimen_0dp</dimen>
+    <dimen name="card_view_elevation">2dp</dimen>
+
+    <dimen name="dimen_0dp">0dp</dimen>
+    <dimen name="dimen_2dp">2dp</dimen>
+    <dimen name="dimen_5dp">5dp</dimen>
+    <dimen name="dimen_10dp">10dp</dimen>
+
+    <!-- drawer -->
     <dimen name="drawer_width">260dp</dimen>
     <dimen name="drawer_top_image_height">140dp</dimen>
-
-    <dimen name="base_margin">10dp</dimen>
-
     <dimen name="drawer_item_height">40dp</dimen>
     <dimen name="drawer_item_text_size">16sp</dimen>
+
+    <!-- google -->
+    <dimen name="refresh_header_height_google">100dp</dimen>
+    <dimen name="refresh_trigger_offset_google">100dp</dimen>
+    <dimen name="refresh_final_offset_google">150dp</dimen>
+    <dimen name="refresh_drawable_size_google">40dp</dimen>
+
+    <dimen name="load_more_footer_height_google">72dp</dimen>
+    <dimen name="load_more_trigger_offset_google">88dp</dimen>
+    <dimen name="load_more_final_offset_google">120dp</dimen>
+    <dimen name="load_more_drawable_size_google">36dp</dimen>
 </resources>
