use real data from server

--- a/app/src/main/res/layout/fragment_strategy.xml
+++ b/app/src/main/res/layout/fragment_strategy.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:gravity="center"
-        android:text="strategy"
+    <com.ogaclejapan.smarttablayout.SmartTabLayout
+        android:id="@+id/smart_tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="@dimen/smart_tab_layout_height"
+        android:layout_alignParentTop="true"
+        app:stl_distributeEvenly="true"/>
+
+    <ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/smart_tab_layout"/>
 
 </RelativeLayout>
