--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,13 @@
 <resources>
     <color name="color_primary">#18171C</color>
 
-    <color name="drawer_text_color">#ffffff</color>
+    <color name="drawer_text_color">@color/white</color>
 
     <color name="title_text">#212121</color>
     <color name="content_text">#727272</color>
 
+    <color name="white">#ffffff</color>
     <color name="grey">#eeeeee</color>
+
+    <color name="transparent">#00ffffff</color>
 </resources>
