--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,10 +14,12 @@
     <dimen name="card_view_elevation">2dp</dimen>
 
     <dimen name="dimen_0dp">0dp</dimen>
+    <dimen name="dimen_1dp">1dp</dimen>
     <dimen name="dimen_2dp">2dp</dimen>
     <dimen name="dimen_5dp">5dp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
-    
+
+    <dimen name="smart_tab_indicator_width">60dp</dimen>
     <dimen name="smart_tab_layout_height">40dp</dimen>
 
     <!-- drawer -->
