--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#18171C</color>
+    <color name="color_primary">#18171c</color>
+    <color name="color_primary_dark">#101209</color>
 
     <color name="drawer_text_color">@color/white</color>
 
