--- a/app/src/main/res/layout/fragment_strategy.xml
+++ b/app/src/main/res/layout/fragment_strategy.xml
@@ -13,7 +13,7 @@
         app:stl_defaultTabTextSize="@dimen/title_text_size"
         app:stl_distributeEvenly="true"
         app:stl_indicatorGravity="bottom"
-        app:stl_indicatorColor="@color/color_primary"
+        app:stl_indicatorColor="@color/dark_red"
         app:stl_indicatorThickness="@dimen/dimen_2dp"
         app:stl_indicatorWidth="@dimen/smart_tab_indicator_width"
         app:stl_underlineColor="@color/transparent"
