--- a/app/src/main/res/layout/fragment_strategy.xml
+++ b/app/src/main/res/layout/fragment_strategy.xml
@@ -9,12 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/smart_tab_layout_height"
         android:layout_alignParentTop="true"
-        android:background="@color/white"
-        app:stl_defaultTabTextColor="@color/dark_red"
+        android:background="@color/color_primary"
+        app:stl_defaultTabTextColor="@color/tab_text_color"
         app:stl_defaultTabTextSize="@dimen/title_text_size"
         app:stl_distributeEvenly="true"
         app:stl_dividerColor="@color/transparent"
-        app:stl_indicatorColor="@color/dark_red"
+        app:stl_indicatorColor="@color/light_red"
         app:stl_indicatorGravity="bottom"
         app:stl_indicatorThickness="@dimen/dimen_2dp"
         app:stl_indicatorWidth="@dimen/smart_tab_indicator_width"
