--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,14 @@
     <color name="color_primary_dark">#101209</color>
 
     <color name="drawer_text_color">@color/white</color>
+    <color name="tab_text_color">@color/white</color>
 
     <color name="title_text">#212121</color>
     <color name="content_text">#727272</color>
 
     <color name="white">#ffffff</color>
     <color name="grey">#eeeeee</color>
+    <color name="light_red">#f24b17</color>
     <color name="dark_red">#c62828</color>
 
     <color name="transparent">#00ffffff</color>
