--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,9 +7,13 @@
     <dimen name="news_list_image_height">65dp</dimen>
     <dimen name="news_list_image_margin">@dimen/dimen_5dp</dimen>
 
+    <dimen name="video_play_icon_size">30dp</dimen>
+
+    <!-- text -->
     <dimen name="title_text_size">14sp</dimen>
     <dimen name="content_text_size">12sp</dimen>
 
+    <!-- CardView -->
     <dimen name="card_view_dimen">@dimen/dimen_0dp</dimen>
     <dimen name="card_view_elevation">2dp</dimen>
 
@@ -19,6 +23,7 @@
     <dimen name="dimen_5dp">5dp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
 
+    <!-- SmartTab -->
     <dimen name="smart_tab_indicator_width">60dp</dimen>
     <dimen name="smart_tab_layout_height">40dp</dimen>
 
