--- a/app/src/main/res/layout/fragment_video_watch.xml
+++ b/app/src/main/res/layout/fragment_video_watch.xml
@@ -4,10 +4,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <include layout="@layout/layout_toolbar"/>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+    <TextView
+        android:id="@+id/tv_test"
+        android:gravity="center"
+        android:textSize="50sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
