--- a/app/src/main/res/layout/fragment_video_watch.xml
+++ b/app/src/main/res/layout/fragment_video_watch.xml
@@ -7,6 +7,6 @@
     <com.youku.player.base.YoukuPlayerView
         android:id="@+id/youku_player"
         android:layout_width="match_parent"
-        android:layout_height="240dp" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
