screen orientation proc

--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -1,42 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/grey">
 
-    <LinearLayout
-        android:id="@+id/player_title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/color_primary"
-        android:minHeight="?attr/actionBarSize"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/iv_back_arrow"
-            android:layout_width="?attr/actionBarSize"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_marginRight="@dimen/dimen_3dp"
-            android:background="@drawable/selector_back_arrow_background"
-            android:src="@drawable/ic_back_arrow"/>
-
-        <TextView
-            android:id="@+id/tv_player_title"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="left|center_vertical"
-            android:singleLine="true"
-            android:text="@string/video_detail"
-            android:textColor="@color/white"
-            android:textSize="20sp"/>
-    </LinearLayout>
+    <include layout="@layout/layout_toolbar"
+        android:id="@+id/toolbar"/>
 
     <com.youku.player.base.YoukuPlayerView
         android:id="@+id/youku_player"
-        android:layout_below="@id/player_title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+</LinearLayout>
