--- a/app/src/main/res/layout/youku_player_play_control.xml
+++ b/app/src/main/res/layout/youku_player_play_control.xml
@@ -21,7 +21,7 @@
             android:paddingBottom="@dimen/detail_play_content_padding_top"
             android:paddingTop="@dimen/detail_play_content_padding_bottom"
             android:scaleType="fitCenter"
-            android:src="@drawable/detail_play_btn_full_screen" />
+            android:src="@drawable/ic_video_full" />
 
         <TextView
             android:id="@+id/total_time"
@@ -36,13 +36,25 @@
             android:text="00:00"
             android:textSize="10dp" />
 
+        <ImageButton
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:id="@+id/ib_detail_play_control"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_pause" />
+
         <TextView
             android:id="@+id/current_time"
             style="@style/player_total_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/ib_detail_play_full"
-            android:layout_alignParentLeft="true"
+            android:layout_toRightOf="@id/ib_detail_play_control"
             android:layout_alignTop="@id/ib_detail_play_full"
             android:layout_marginLeft="@dimen/detail_play_progress_margin_left"
             android:gravity="center"
@@ -72,34 +84,5 @@
                 android:thumb="@drawable/yp_detail_icon_schedule_ball" />
         </LinearLayout>
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@id/rl_seek"
-        android:orientation="horizontal"
-        android:padding="@dimen/plugin_detail_play_pause_pandding" >
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" />
-
-        <ImageButton
-            android:id="@+id/ib_detail_play_control"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/play_btn_pause_big_detail" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" />
-    </LinearLayout>
 
 </RelativeLayout>
