--- a/app/src/main/res/layout/youku_player_loading.xml
+++ b/app/src/main/res/layout/youku_player_loading.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/seek_loading_bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@drawable/bg_play"
-        android:orientation="vertical" >
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/loading_tips"
-            style="@style/detail_play_load"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/player_tip_loading" />
+        <ImageView
+            android:id="@+id/iv_blur"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <SeekBar
             android:id="@+id/loading_seekbar"
             android:layout_width="320dp"
             android:layout_height="1dp"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:layout_margin="@dimen/detail_play_progress_margin_left"
             android:clickable="false"
             android:max="100"
             android:progressDrawable="@drawable/yp_progressbarstyle"
             android:thumb="@drawable/yp_progressthumbstyle"
-            android:thumbOffset="-10dp" />
+            android:thumbOffset="-10dp"/>
 
         <TextView
             android:id="@+id/detail_play_load_name"
             style="@style/detail_play_load_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_below="@id/loading_seekbar"
+            android:layout_centerHorizontal="true"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="" />
-    </LinearLayout>
+            android:text=""/>
+
+        <TextView
+            android:id="@+id/loading_tips"
+            style="@style/detail_play_load"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/loading_seekbar"
+            android:layout_centerHorizontal="true"
+            android:text="@string/player_tip_loading"/>
+    </RelativeLayout>
 
 </merge>
