--- a/app/src/main/res/layout/youku_player_retry.xml
+++ b/app/src/main/res/layout/youku_player_retry.xml
@@ -2,21 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_restart"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_play" >
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/go_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="horizontal" >
+        android:layout_centerInParent="true">
 
         <ImageView
+            android:id="@+id/iv_retry_blur"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <ImageView
+            android:id="@+id/iv_retry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
+            android:layout_centerInParent="true"
             android:src="@drawable/play_over_replay" />
 
         <TextView
@@ -24,8 +29,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
+            android:layout_toRightOf="@id/iv_retry"
             android:padding="5px"
             android:text="重试" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
