--- a/app/src/main/res/layout/youku_player_retry.xml
+++ b/app/src/main/res/layout/youku_player_retry.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/iv_retry_blur"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <RelativeLayout
         android:id="@+id/go_retry"
         android:layout_width="wrap_content"
@@ -11,17 +17,11 @@
         android:layout_centerInParent="true">
 
         <ImageView
-            android:id="@+id/iv_retry_blur"
-            android:scaleType="centerCrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <ImageView
             android:id="@+id/iv_retry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
             android:src="@drawable/play_over_replay" />
 
         <TextView
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:layout_toRightOf="@id/iv_retry"
+            android:layout_centerVertical="true"
             android:padding="5px"
             android:text="重试" />
     </RelativeLayout>
