--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/tv_watch_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/video_info_area_text_size"
+                android:textSize="@dimen/video_info_area_common_text_size"
                 android:textColor="@color/content_text" />
         </LinearLayout>
 
@@ -77,7 +77,7 @@
             <TextView
                 android:id="@+id/tv_down"
                 android:gravity="center"
-                android:textSize="@dimen/video_info_area_text_size"
+                android:textSize="@dimen/video_info_area_common_text_size"
                 android:textColor="@color/content_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -99,11 +99,44 @@
             <TextView
                 android:id="@+id/tv_up"
                 android:gravity="center"
-                android:textSize="@dimen/video_info_area_text_size"
+                android:textSize="@dimen/video_info_area_common_text_size"
                 android:textColor="@color/content_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/base_margin"
+        android:paddingRight="@dimen/base_margin"
+        android:paddingTop="@dimen/base_little_margin"
+        android:paddingBottom="@dimen/base_little_margin"
+        android:layout_marginTop="@dimen/base_little_margin">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:text="--"
+            android:textColor="@color/title_text"
+            android:textStyle="bold"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textSize="@dimen/video_info_area_big_text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_publish_time"
+            android:text="--"
+            android:textColor="@color/content_text"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/base_little_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_title" />
 
     </RelativeLayout>
 
