VideoPlayerActivity add related video list

--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -68,7 +68,8 @@
             android:id="@+id/tv_publish_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@id/tv_title"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/base_margin"
             android:layout_alignTop="@id/tv_video_length"
             android:text="发布时间：04/12"
             android:textColor="@color/content_text"
