--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -30,114 +31,221 @@
                 android:layout_centerInParent="true"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/ic_center_play" />
+                android:src="@drawable/ic_video_play" />
         </RelativeLayout>
     </com.youku.player.base.YoukuPlayerView>
 
-    <RelativeLayout
+    <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/video_info_area_height"
-        android:background="@color/white"
-        android:paddingLeft="@dimen/base_margin"
-        android:paddingRight="@dimen/base_margin">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_alignParentLeft="true"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:src="@drawable/ic_watched"
-                android:layout_width="@dimen/video_info_area_icon_size"
-                android:layout_height="@dimen/video_info_area_icon_size" />
-
-            <TextView
-                android:id="@+id/tv_watch_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/video_info_area_common_text_size"
-                android:textColor="@color/content_text" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_down"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:src="@drawable/ic_down"
-                android:layout_width="@dimen/video_info_area_icon_size"
-                android:layout_height="@dimen/video_info_area_icon_size" />
-
-            <TextView
-                android:id="@+id/tv_down"
-                android:gravity="center"
-                android:textSize="@dimen/video_info_area_common_text_size"
-                android:textColor="@color/content_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:gravity="center"
-            android:layout_toLeftOf="@id/ll_down"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="@dimen/base_margin">
-
-            <ImageView
-                android:src="@drawable/ic_up"
-                android:layout_width="@dimen/video_info_area_icon_size"
-                android:layout_height="@dimen/video_info_area_icon_size" />
-
-            <TextView
-                android:id="@+id/tv_up"
-                android:gravity="center"
-                android:textSize="@dimen/video_info_area_common_text_size"
-                android:textColor="@color/content_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/base_margin"
-        android:paddingRight="@dimen/base_margin"
-        android:paddingTop="@dimen/base_little_margin"
-        android:paddingBottom="@dimen/base_little_margin"
-        android:layout_marginTop="@dimen/base_little_margin">
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:text="--"
-            android:textColor="@color/title_text"
-            android:textStyle="bold"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textSize="@dimen/video_info_area_big_text_size"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_publish_time"
-            android:text="--"
-            android:textColor="@color/content_text"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="@dimen/base_little_margin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_title" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/video_info_area_height"
+                android:background="@color/white"
+                android:paddingLeft="@dimen/base_margin"
+                android:paddingRight="@dimen/base_margin">
 
-    </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_alignParentLeft="true"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:src="@drawable/ic_watched"
+                        android:layout_width="@dimen/video_info_area_icon_size"
+                        android:layout_height="@dimen/video_info_area_icon_size" />
+
+                    <TextView
+                        android:id="@+id/tv_watch_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/video_info_area_common_text_size"
+                        android:textColor="@color/content_text" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_down"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:src="@drawable/ic_down"
+                        android:layout_width="@dimen/video_info_area_icon_size"
+                        android:layout_height="@dimen/video_info_area_icon_size" />
+
+                    <TextView
+                        android:id="@+id/tv_down"
+                        android:gravity="center"
+                        android:textSize="@dimen/video_info_area_common_text_size"
+                        android:textColor="@color/content_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_toLeftOf="@id/ll_down"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/base_margin">
+
+                    <ImageView
+                        android:src="@drawable/ic_up"
+                        android:layout_width="@dimen/video_info_area_icon_size"
+                        android:layout_height="@dimen/video_info_area_icon_size" />
+
+                    <TextView
+                        android:id="@+id/tv_up"
+                        android:gravity="center"
+                        android:textSize="@dimen/video_info_area_common_text_size"
+                        android:textColor="@color/content_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/base_margin"
+                android:paddingRight="@dimen/base_margin"
+                android:paddingTop="@dimen/base_little_margin"
+                android:paddingBottom="@dimen/base_little_margin"
+                android:layout_marginTop="@dimen/base_little_margin">
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:text="--"
+                    android:textColor="@color/title_text"
+                    android:textStyle="bold"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:textSize="@dimen/video_info_area_big_text_size"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tv_publish_time"
+                    android:text="--"
+                    android:textColor="@color/content_text"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="@dimen/base_little_margin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/video_info_area_common_text_size"
+                    android:layout_below="@id/tv_title" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_anthology_container"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/base_little_margin"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/base_margin"
+                android:paddingRight="@dimen/base_margin"
+                android:paddingTop="@dimen/base_little_margin"
+                android:paddingBottom="@dimen/base_little_margin">
+
+                <RelativeLayout
+                    android:id="@+id/rl_anthology_text_container"
+                    android:layout_alignParentTop="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tv_anthology"
+                        android:text="@string/anthology"
+                        android:layout_centerVertical="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/video_info_area_common_text_size"
+                        android:textColor="@color/title_text"
+                        android:layout_marginLeft="@dimen/base_little_margin" />
+
+                    <ImageView
+                        android:src="@drawable/shape_thin_rectangle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentLeft="true" />
+
+                </RelativeLayout>
+
+                <android.support.v7.widget.GridLayout
+                    android:id="@+id/grid_layout"
+                    android:layout_below="@id/rl_anthology_text_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:columnCount="5"
+                    app:orientation="horizontal" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_related_video_container"
+                android:visibility="visible"
+                android:layout_marginTop="@dimen/base_little_margin"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/base_margin"
+                android:paddingRight="@dimen/base_margin"
+                android:paddingTop="@dimen/base_little_margin"
+                android:paddingBottom="@dimen/base_little_margin">
+
+                <RelativeLayout
+                    android:id="@+id/rl_related_video_text_container"
+                    android:layout_alignParentTop="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tv_related_video"
+                        android:text="@string/related_video"
+                        android:layout_centerVertical="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/video_info_area_common_text_size"
+                        android:textColor="@color/title_text"
+                        android:layout_marginLeft="@dimen/base_little_margin" />
+
+                    <ImageView
+                        android:src="@drawable/shape_thin_rectangle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentLeft="true" />
+
+                </RelativeLayout>
+
+                <com.fangxu.dota2helper.ui.widget.ScrollListView
+                    android:id="@+id/scroll_list_view"
+                    android:background="@color/white"
+                    android:layout_below="@id/rl_related_video_text_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
