--- a/app/src/main/res/layout/layout_google_hook_header.xml
+++ b/app/src/main/res/layout/layout_google_hook_header.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.fangxu.dota2helper.ui.view.GoogleCircleHookRefreshHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fangxu.dota2helper.ui.widget.GoogleCircleHookRefreshHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/refresh_header_height_google"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent"
     android:orientation="vertical">
 
-    <com.fangxu.dota2helper.ui.view.GoogleCircleProgressView
+    <com.fangxu.dota2helper.ui.widget.GoogleCircleProgressView
         android:id="@+id/googleProgress"
         app:gcp_show_arrow="true"
         app:gcp_progress_stoke_width="3dp"
@@ -15,4 +15,4 @@
         android:layout_width="@dimen/refresh_drawable_size_google"
         android:layout_height="@dimen/refresh_drawable_size_google"
         android:layout_gravity="center" />
-</com.fangxu.dota2helper.ui.view.GoogleCircleHookRefreshHeaderView>
+</com.fangxu.dota2helper.ui.widget.GoogleCircleHookRefreshHeaderView>
