--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="base_little_margin">@dimen/dimen_5dp</dimen>
 
     <dimen name="news_list_image_width">85dp</dimen>
+    <dimen name="related_video_list_image_width">100dp</dimen>
     <dimen name="news_list_image_height">65dp</dimen>
     <dimen name="news_list_image_margin">@dimen/dimen_5dp</dimen>
 
@@ -14,6 +15,8 @@
     <dimen name="video_info_area_big_text_size">16sp</dimen>
     <dimen name="video_info_area_common_text_size">14sp</dimen>
     <dimen name="video_info_area_icon_size">18dp</dimen>
+    <dimen name="select_button_height">35dp</dimen>
+    <dimen name="select_button_width">60dp</dimen>
 
     <!-- text -->
     <dimen name="title_text_size">14sp</dimen>
@@ -27,6 +30,7 @@
     <dimen name="dimen_1dp">1dp</dimen>
     <dimen name="dimen_2dp">2dp</dimen>
     <dimen name="dimen_3dp">3dp</dimen>
+    <dimen name="dimen_4dp">4dp</dimen>
     <dimen name="dimen_5dp">5dp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
 
