--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/grey">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/grey"
+              android:orientation="vertical">
 
     <include
-        layout="@layout/layout_toolbar"
-        android:id="@+id/toolbar" />
+        android:id="@+id/toolbar"
+        layout="@layout/layout_toolbar"/>
 
     <com.youku.player.base.YoukuPlayerView
         android:id="@+id/youku_player"
@@ -22,16 +22,16 @@
 
             <ImageView
                 android:id="@+id/iv_blur"
-                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"/>
 
             <ImageView
                 android:id="@+id/iv_play"
-                android:layout_centerInParent="true"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/ic_video_play" />
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_video_play"/>
         </RelativeLayout>
     </com.youku.player.base.YoukuPlayerView>
 
@@ -41,14 +41,13 @@
 
         <ScrollView
             android:id="@+id/scroll_view"
-            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -60,193 +59,207 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="center"
                         android:layout_alignParentLeft="true"
+                        android:gravity="center"
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:src="@drawable/ic_watched"
                             android:layout_width="@dimen/video_info_area_icon_size"
-                            android:layout_height="@dimen/video_info_area_icon_size" />
+                            android:layout_height="@dimen/video_info_area_icon_size"
+                            android:src="@drawable/ic_watched"/>
 
                         <TextView
                             android:id="@+id/tv_watch_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/video_info_area_common_text_size"
-                            android:textColor="@color/content_text" />
+                            android:text="0次播放"
+                            android:textColor="@color/content_text"
+                            android:textSize="@dimen/video_info_area_common_text_size"/>
                     </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/ll_down"
-                        android:layout_alignParentRight="true"
                         android:layout_width="wrap_content"
-                        android:gravity="center"
                         android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:gravity="center"
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:src="@drawable/ic_down"
                             android:layout_width="@dimen/video_info_area_icon_size"
-                            android:layout_height="@dimen/video_info_area_icon_size" />
+                            android:layout_height="@dimen/video_info_area_icon_size"
+                            android:src="@drawable/ic_down"/>
 
                         <TextView
                             android:id="@+id/tv_down"
-                            android:gravity="center"
-                            android:textSize="@dimen/video_info_area_common_text_size"
-                            android:textColor="@color/content_text"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="0"
+                            android:textColor="@color/content_text"
+                            android:textSize="@dimen/video_info_area_common_text_size"/>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:gravity="center"
-                        android:layout_toLeftOf="@id/ll_down"
-                        android:orientation="horizontal"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="@dimen/base_margin">
+                        android:layout_marginRight="@dimen/base_margin"
+                        android:layout_toLeftOf="@id/ll_down"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <ImageView
-                            android:src="@drawable/ic_up"
                             android:layout_width="@dimen/video_info_area_icon_size"
-                            android:layout_height="@dimen/video_info_area_icon_size" />
+                            android:layout_height="@dimen/video_info_area_icon_size"
+                            android:src="@drawable/ic_up"/>
 
                         <TextView
                             android:id="@+id/tv_up"
-                            android:gravity="center"
-                            android:textSize="@dimen/video_info_area_common_text_size"
-                            android:textColor="@color/content_text"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="0"
+                            android:textColor="@color/content_text"
+                            android:textSize="@dimen/video_info_area_common_text_size"/>
                     </LinearLayout>
 
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/base_little_margin"
+                    android:background="@color/white"
+                    android:paddingBottom="@dimen/base_little_margin"
                     android:paddingLeft="@dimen/base_margin"
                     android:paddingRight="@dimen/base_margin"
-                    android:paddingTop="@dimen/base_little_margin"
-                    android:paddingBottom="@dimen/base_little_margin"
-                    android:layout_marginTop="@dimen/base_little_margin">
+                    android:paddingTop="@dimen/base_little_margin">
 
                     <TextView
                         android:id="@+id/tv_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:singleLine="true"
                         android:text="--"
                         android:textColor="@color/title_text"
-                        android:textStyle="bold"
-                        android:singleLine="true"
-                        android:ellipsize="end"
                         android:textSize="@dimen/video_info_area_big_text_size"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/tv_publish_time"
-                        android:text="--"
-                        android:textColor="@color/content_text"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginTop="@dimen/base_little_margin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/video_info_area_common_text_size"
-                        android:layout_below="@id/tv_title" />
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@id/tv_title"
+                        android:layout_marginTop="@dimen/base_little_margin"
+                        android:text="--"
+                        android:textColor="@color/content_text"
+                        android:textSize="@dimen/video_info_area_common_text_size"/>
 
                 </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/rl_anthology_container"
-                    android:visibility="gone"
-                    android:layout_marginTop="@dimen/base_little_margin"
-                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/base_little_margin"
+                    android:background="@color/white"
+                    android:paddingBottom="@dimen/base_little_margin"
                     android:paddingLeft="@dimen/base_margin"
                     android:paddingRight="@dimen/base_margin"
                     android:paddingTop="@dimen/base_little_margin"
-                    android:paddingBottom="@dimen/base_little_margin">
+                    android:visibility="gone">
 
                     <RelativeLayout
                         android:id="@+id/rl_anthology_text_container"
-                        android:layout_alignParentTop="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true">
 
                         <TextView
                             android:id="@+id/tv_anthology"
-                            android:text="@string/anthology"
-                            android:layout_centerVertical="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/video_info_area_common_text_size"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="@dimen/base_little_margin"
+                            android:text="@string/anthology"
                             android:textColor="@color/title_text"
-                            android:layout_marginLeft="@dimen/base_little_margin" />
+                            android:textSize="@dimen/video_info_area_common_text_size"/>
 
                         <ImageView
-                            android:src="@drawable/shape_thin_rectangle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
                             android:layout_centerVertical="true"
-                            android:layout_alignParentLeft="true" />
+                            android:src="@drawable/shape_thin_rectangle"/>
 
                     </RelativeLayout>
 
                     <android.support.v7.widget.GridLayout
                         android:id="@+id/grid_layout"
-                        android:layout_below="@id/rl_anthology_text_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_below="@id/rl_anthology_text_container"
                         app:columnCount="5"
-                        app:orientation="horizontal" />
+                        app:orientation="horizontal"/>
 
                 </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/rl_related_video_container"
-                    android:visibility="visible"
-                    android:layout_marginTop="@dimen/base_little_margin"
-                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/base_little_margin"
+                    android:background="@color/white"
+                    android:paddingBottom="@dimen/base_little_margin"
                     android:paddingLeft="@dimen/base_margin"
                     android:paddingRight="@dimen/base_margin"
                     android:paddingTop="@dimen/base_little_margin"
-                    android:paddingBottom="@dimen/base_little_margin">
+                    android:visibility="visible">
 
                     <RelativeLayout
                         android:id="@+id/rl_related_video_text_container"
-                        android:layout_alignParentTop="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true">
 
                         <TextView
                             android:id="@+id/tv_related_video"
-                            android:text="@string/related_video"
-                            android:layout_centerVertical="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/video_info_area_common_text_size"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="@dimen/base_little_margin"
+                            android:text="@string/related_video"
                             android:textColor="@color/title_text"
-                            android:layout_marginLeft="@dimen/base_little_margin" />
+                            android:textSize="@dimen/video_info_area_common_text_size"/>
 
                         <ImageView
-                            android:src="@drawable/shape_thin_rectangle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
                             android:layout_centerVertical="true"
-                            android:layout_alignParentLeft="true" />
+                            android:src="@drawable/shape_thin_rectangle"/>
 
                     </RelativeLayout>
 
                     <com.fangxu.dota2helper.ui.widget.ScrollListView
                         android:id="@+id/scroll_list_view"
-                        android:background="@color/white"
-                        android:layout_below="@id/rl_related_video_text_container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/rl_related_video_text_container"
+                        android:background="@color/white"/>
+
+                    <TextView
+                        android:id="@+id/tv_empty_list"
+                        android:visibility="invisible"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@id/rl_related_video_text_container"
+                        android:layout_below="@id/rl_related_video_text_container"
+                        android:text="@string/no_related_video"
+                        android:textColor="@color/content_text"
+                        android:textSize="@dimen/video_info_area_common_text_size"/>
                 </RelativeLayout>
 
             </LinearLayout>
@@ -255,19 +268,16 @@
 
         <FrameLayout
             android:id="@+id/fl_progress_container"
-            android:visibility="invisible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/grey">
 
-            <com.fangxu.dota2helper.ui.widget.GoogleCircleProgressView
-                android:id="@+id/googleProgress"
-                app:gcp_show_arrow="true"
-                app:gcp_progress_stoke_width="3dp"
-                app:gcp_arrow_height="6dp"
-                app:gcp_arrow_width="8dp"
-                android:layout_width="@dimen/load_more_drawable_size_google"
-                android:layout_height="@dimen/load_more_drawable_size_google"
-                android:layout_gravity="center" />
+            <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
+                android:layout_width="@dimen/load_video_detail_progress_size"
+                android:layout_height="@dimen/load_video_detail_progress_size"
+                android:layout_gravity="center"
+                app:mlpb_progress_color="@color/color_primary"
+                app:mlpb_progress_stoke_width="@dimen/dimen_3dp"/>
 
         </FrameLayout>
 
