--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,6 +3,8 @@
     <item name="swipe_target" type="id" />
     <item name="swipe_refresh_header" type="id" />
     <item name="swipe_load_more_footer" type="id" />
+    <item name="tag_title" type="id"/>
+    <item name="tag_publish_in" type="id"/>
     <item name="tag_date" type="id"/>
     <item name="tag_id" type="id"/>
     <item name="tag_background" type="id"/>
