--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,6 +35,8 @@
     <dimen name="dimen_5dp">5dp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
 
+    <dimen name="banner_item_title_height">40dp</dimen>
+
     <!-- SmartTab -->
     <dimen name="smart_tab_indicator_width">60dp</dimen>
     <dimen name="smart_tab_layout_height">40dp</dimen>
