--- a/app/src/main/res/drawable/dot_normal.xml
+++ b/app/src/main/res/drawable/dot_normal.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#ffffff"/>
+    <solid android:color="#c3bfb5"/>
 
 </shape>
