--- a/app/src/main/res/layout/item_strategies.xml
+++ b/app/src/main/res/layout/item_strategies.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/base_little_margin"
-    android:layout_marginRight="@dimen/base_little_margin"
-    android:layout_marginTop="@dimen/card_view_dimen"
-    android:foreground="?attr/selectableItemBackground"
-    card_view:cardCornerRadius="@dimen/dimen_0dp"
-    card_view:cardElevation="@dimen/card_view_elevation">
+                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/base_little_margin"
+                                    android:layout_marginRight="@dimen/base_little_margin"
+                                    android:layout_marginTop="@dimen/card_view_dimen"
+                                    android:foreground="?attr/selectableItemBackground"
+                                    card_view:cardCornerRadius="@dimen/dimen_0dp"
+                                    card_view:cardElevation="@dimen/card_view_elevation"
+                                    card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,44 +17,44 @@
 
         <ImageView
             android:id="@+id/iv_background"
-            android:background="@color/color_primary"
-            android:layout_marginLeft="@dimen/news_list_image_margin"
-            android:layout_marginTop="@dimen/news_list_image_margin"
-            android:layout_marginBottom="@dimen/news_list_image_margin"
             android:layout_width="@dimen/news_list_image_width"
             android:layout_height="@dimen/news_list_image_height"
-            android:scaleType="centerCrop" />
+            android:layout_marginBottom="@dimen/news_list_image_margin"
+            android:layout_marginLeft="@dimen/news_list_image_margin"
+            android:layout_marginTop="@dimen/news_list_image_margin"
+            android:background="@color/color_primary"
+            android:scaleType="centerCrop"/>
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_toRightOf="@id/iv_background"
-            android:text="减肥的开始了几十fjkdfklsjk块的了解放路上"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textStyle="bold"
-            android:textSize="@dimen/title_text_size"
-            android:textColor="@color/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignTop="@id/iv_background"
-            android:includeFontPadding="false"
             android:layout_marginLeft="@dimen/base_margin"
             android:layout_marginRight="@dimen/base_margin"
             android:layout_marginTop="@dimen/base_little_margin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_toRightOf="@id/iv_background"
+            android:ellipsize="end"
+            android:includeFontPadding="false"
+            android:singleLine="true"
+            android:text="减肥的开始了几十fjkdfklsjk块的了解放路上"
+            android:textColor="@color/title_text"
+            android:textSize="@dimen/title_text_size"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/content_text"
-            android:includeFontPadding="false"
-            android:layout_marginTop="@dimen/base_margin"
-            android:text="会计分录社交类方省是咖啡技术老大"
-            android:layout_below="@id/tv_title"
-            android:ellipsize="end"
-            android:textSize="@dimen/content_text_size"
             android:layout_alignLeft="@id/tv_title"
-            android:maxLines="2" />
+            android:layout_below="@id/tv_title"
+            android:layout_marginTop="@dimen/base_margin"
+            android:ellipsize="end"
+            android:includeFontPadding="false"
+            android:maxLines="2"
+            android:text="会计分录社交类方省是咖啡技术老大"
+            android:textColor="@color/content_text"
+            android:textSize="@dimen/content_text_size"/>
 
     </RelativeLayout>
 
