user entrance and recyclerview item quick click

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -51,6 +51,7 @@
     <dimen name="drawer_width">260dp</dimen>
     <dimen name="drawer_top_image_height">150dp</dimen>
     <dimen name="drawer_item_height">45dp</dimen>
+    <dimen name="drawer_user_height">40dp</dimen>
     <dimen name="drawer_item_text_size">16sp</dimen>
     <dimen name="drawer_icon_margin">18dp</dimen>
     <dimen name="drawer_icon_size">24dp</dimen>
