--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,29 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2015 [1076559197@qq.com | tchen0707@gmail.com]
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License”);
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+<?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/splash_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/splash1"/>
+        android:src="@drawable/splash1" />
 
     <TextView
         android:id="@+id/splash_app_name"
@@ -35,7 +21,7 @@
         android:text="@string/app_name"
         android:textColor="@android:color/white"
         android:textSize="50sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,7 +39,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/splash_copyright"
@@ -63,8 +49,7 @@
             android:gravity="center"
             android:lineSpacingExtra="2dp"
             android:textColor="@color/white"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
     </LinearLayout>
-
 
 </RelativeLayout>
