--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,11 @@
     <color name="alpha_white">#1affffff</color>
     <color name="white">#ffffff</color>
     <color name="grey">#eeeeee</color>
+    <color name="grey_light">#f5f5f5</color>
     <color name="light_red">#f24b17</color>
     <color name="dark_red">#c62828</color>
+
+    <color name="color_webview_progressbar">#80ffffff</color>
 
     <color name="transparent">#00ffffff</color>
     <color name="black_half_transparent">#80000000</color>
