--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <drawable name="drawable_primary">@color/color_primary</drawable>
+    <drawable name="progress_bar_bg">@color/color_webview_progressbar</drawable>
 </resources>
