min start video player play icon

--- a/youkuPlayerOpenSDK/src/main/res/layout/yp_player_ad_youku.xml
+++ b/youkuPlayerOpenSDK/src/main/res/layout/yp_player_ad_youku.xml
@@ -82,7 +82,7 @@
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
-            android:src="@drawable/play_btn_play_big_detail"
+            android:src="@drawable/ic_video_play"
             android:visibility="gone" />
 
         <RelativeLayout
